c2prj1_cards/grade.txt
Grading at Sun Sep  8 00:54:14 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:136:3: error: ‘xcase’ undeclared (first use in this function)
   xcase 'd' :{temp.suit = DIAMONDS ;  break;}
   ^
cards.c:136:3: note: each undeclared identifier is reported only once for each function it appears in
cards.c:136:9: error: expected ‘;’ before 'd'
   xcase 'd' :{temp.suit = DIAMONDS ;  break;}
         ^
Could not compile your card.c!

Overall Grade: FAILED
